[project]
name = "braintest-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoevals>=0.0.130",
    "braintrust>=0.10.0",
    "click>=8.1.0",
    "faker>=40.1.2",
    "locust>=2.43.2",
    "pydantic-settings[yaml]>=2.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaltest", "functional_test", "loadtest"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"config.py" = "config.py"
"util.py" = "util.py"
"braintest.yaml" = "braintest.yaml"

[project.scripts]
braintest = "main:cli"
