[project]
name = "braintest-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "autoevals>=0.0.130",
    "braintrust>=0.10.0",
    "click>=8.1.0",
    "faker>=40.1.2",
    "locust>=2.43.2",
    "pydantic-settings[yaml]>=2.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
braintest = "braintest_suite:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
